# niz-kbd-util

./: .gitmodules  README.md  meson.build
configs/: atom66-current.niz  atom66-default.niz  example.niz
memo/: atom66-index.txt
scripts/: find-hidraw.sh
src/: calib.cpp  common.cpp  common.hpp  config.cpp  firmware.cpp  keycodes.txt  keycounts.cpp  keymap.cpp  main.cpp  niz.cpp  niz.hpp
